# tp_volume_rendering

./: CMakeCache.txt  CMakeLists.txt  Makefile  README  backtrace_log.txt  cmake_install.cmake  pgm
projet/: Makefile  backtrace_log.txt  generate_animation.py  gnuplot_attenuation.p  gnuplot_emission.p  im.ppm  pgm  script_plot.sh  tim.ppm
projet/data/: head_ct.4d.tar.bz2  head_ct_25.4d  head_ct_256.4d.tar.bz2  head_ct_50.4d
projet/doc/: doxygen_config
projet/output/: mip_000.ppm  mip_001.ppm  mip_002.ppm  mip_003.ppm  mip_004.ppm  mip_005.ppm  mip_006.ppm  mip_007.ppm  mip_008.ppm  mip_009.ppm  mip_010.ppm  mip_011.ppm  mip_012.ppm  mip_013.ppm  mip_014.ppm  mip_015.ppm  mip_016.ppm  mip_017.ppm  mip_018.ppm  mip_019.ppm  ray_000.ppm  ray_001.ppm  ray_002.ppm  ray_003.ppm  ray_004.ppm  ray_005.ppm  ray_006.ppm  ray_007.ppm  ray_008.ppm  ray_009.ppm  ray_010.ppm  ray_011.ppm  ray_012.ppm  ray_013.ppm  ray_014.ppm  ray_015.ppm  ray_016.ppm  ray_017.ppm  ray_018.ppm  ray_019.ppm  (+50 more)
projet/src/lib/common/: basic_functions.cpp
projet/src/local/: main.cpp
projet/src/volume/: transfert_function.cpp  transfert_function.hpp  volume.cpp  volume.hpp
